# LinuxTaRT

./: ChangeLog  Makefile.in  README  README.setup  acconfig.h  config.h.in  configure  configure.in
.AppleDouble/: .Parent  COPYING  ChangeLog  INSTALL  README  README.setup  acconfig.h  config.guess  config.h.in  config.sub  configure  configure.in  install-sh
autom4te.cache/: output.0  traces.0
autom4te.cache/.AppleDouble/: .Parent  output.0  requests  traces.0
doc/: Makefile.in  tart-custom.5  tart.1  tartdates.5  tartrc.5
doc/.AppleDouble/: .Parent  Makefile.in  tart-custom.5  tart.1  tartdates.5  tartrc.5
misc/: Makefile.in  tart-custom-distrib  tart.tags  tartdates-distrib  tartrc-distrib
misc/.AppleDouble/: .Parent  tart-custom-distrib  tart.tags  tartdates-distrib  tartrc-distrib
src/: IniFile.c  IniFile.h  Makefile.in  colors.h  ibeat.c  ibeat.h  main.c  nocolors.h  opt.h  riscos.c  riscos.h  stringutil.c  stringutil.h  tartutil.c  tartutil.h
src/.AppleDouble/: .Parent  IniFile.c  IniFile.h  Makefile.in  colors.h  ibeat.c  ibeat.h  main.c  nocolors.h  opt.h  riscos.c  riscos.h  stringutil.c  stringutil.h  tartutil.c  tartutil.h
